[package]
name = "network_sweep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termion = "1.5"
crossterm = "0.25"
ssdp-client = "*"
tokio = { version = "1", features = ["full"] }
futures = "0.3.4"
tui = { version = "0.19", default-features = false, features = ['termion'] }